kubernetes_config/cpu_config.yml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - name: test
    image: docker/getting-started
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  # - name: log-aggregator
  #   image: images.my-company.example/log-aggregator:v6
  #   resources:
  #     requests:
  #       memory: "64Mi"
  #       cpu: "250m"
  #     limits:
  #       memory: "128Mi"
  #       cpu: "500m"
