kubernetes_config/nginx-controller.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: python-app
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
