kubernetes_config/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: python-app-end-point
subsets:
  - addresses:
      - ip: 192.0.2.42
    ports:
      - port: 8086
