kubernetes_config/loadbalancer.yml
kind: Service
apiVersion: v1
metadata:
  name: python-app-loadbalancer
spec:
  type: LoadBalancer
  selector:
    name: python-app
  ports:
    - port: 8086
      targetPort: 8086
      nodePort: 32767
  #externalTrafficPolicy: Cluster
  # loadBalancerSourceRanges:
  #  - 35.244.218.25/32
  #clusterIP: 10.60.0.1
