kubernetes_config/nodeport.yml
kind: Service
apiVersion: v1
metadata:
  name: nodeport
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8086
      nodePort: 30000
  selector:
    name: python-app
