kubernetes_config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: default
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
